log/build_2026-03-20_00-49-08/cuda_depth_register/stdout_stderr.log
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.8.4 (/opt/ros/rolling/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.12.3") found components: Interpreter 
-- Found rclcpp: 30.1.3 (/opt/ros/rolling/share/rclcpp/cmake)
-- Found rosidl_generator_c: 5.1.1 (/opt/ros/rolling/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 5.1.1 (/opt/ros/rolling/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.9.1 (/opt/ros/rolling/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 9.4.4 (/opt/ros/rolling/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.13")  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 5.9.1 (/opt/ros/rolling/share/sensor_msgs/cmake)
-- Found cv_bridge: 4.1.0 (/opt/ros/rolling/share/cv_bridge/cmake)
[33mCMake Warning (dev) at /usr/local/lib/cmake/opencv4/OpenCVConfig.cmake:86 (find_package):
  Policy CMP0146 is not set: The FindCUDA module is removed.  Run "cmake
  --help-policy CMP0146" for policy details.  Use the cmake_policy command to
  set the policy and suppress this warning.

Call Stack (most recent call first):
  /usr/local/lib/cmake/opencv4/OpenCVConfig.cmake:108 (find_host_package)
  /opt/ros/rolling/share/cv_bridge/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/rolling/share/cv_bridge/cmake/cv_bridgeConfig.cmake:41 (include)
  CMakeLists.txt:12 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.
[0m
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found CUDA: /usr/local/cuda-12.3 (found suitable exact version "12.3") 
-- Found image_transport: 6.4.3 (/opt/ros/rolling/share/image_transport/cmake)
[33mCMake Warning (dev) at CMakeLists.txt:14 (find_package):
  Policy CMP0146 is not set: The FindCUDA module is removed.  Run "cmake
  --help-policy CMP0146" for policy details.  Use the cmake_policy command to
  set the policy and suppress this warning.

This warning is for project developers.  Use -Wno-dev to suppress it.
[0m
-- Found CUDA: /usr/local/cuda-12.3 (found version "12.3") 
[0mCMake Deprecation Warning at /opt/ros/rolling/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:87 (message):
  ament_target_dependencies() is deprecated.  Use target_link_libraries()
  with modern CMake targets instead.  Try replacing this call with:

    target_link_libraries(cuda_depth_register_node PUBLIC
      ${sensor_msgs_TARGETS}
      cv_bridge::cv_bridge
      image_transport::image_transport
      rclcpp::rclcpp
      sensor_msgs::sensor_msgs_library
    )

Call Stack (most recent call first):
  CMakeLists.txt:33 (ament_target_dependencies)

[0m
-- Found ament_lint_auto: 0.20.3 (/opt/ros/rolling/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/jorge/ros2_thesis_ws/src/cuda_depth_register/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (11.7s)
-- Generating done (0.0s)
-- Build files have been written to: /home/jorge/ros2_thesis_ws/src/cuda_depth_register/build/cuda_depth_register
[ 25%] [34m[1mBuilding NVCC (Device) object CMakeFiles/depth_register_cuda.dir/src/depth_register_cuda_generated_depth_register.cu.o[0m
In file included from /usr/local/cuda-12.3/include/cuda_runtime.h:82,
                 from <command-line>:
/usr/local/cuda-12.3/include/crt/host_config.h:143:2: error: #error -- unsupported GNU version! gcc versions later than 12 are not supported! The nvcc flag '-allow-unsupported-compiler' can be used to override this version check; however, using an unsupported host compiler may cause compilation failure or incorrect run time execution. Use at your own risk.
  143 | #error -- unsupported GNU version! gcc versions later than 12 are not supported! The nvcc flag '-allow-unsupported-compiler' can be used to override this version check; however, using an unsupported host compiler may cause compilation failure or incorrect run time execution. Use at your own risk.
      |  ^~~~~
/home/jorge/ros2_thesis_ws/src/cuda_depth_register/src/depth_register.cu:4:10: fatal error: depth_register.hpp: No such file or directory
    4 | #include "depth_register.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~
compilation terminated.
[31mCMake Error at depth_register_cuda_generated_depth_register.cu.o.cmake:220 (message):
  Error generating
  /home/jorge/ros2_thesis_ws/src/cuda_depth_register/build/cuda_depth_register/CMakeFiles/depth_register_cuda.dir/src/./depth_register_cuda_generated_depth_register.cu.o

[0m
gmake[2]: *** [CMakeFiles/depth_register_cuda.dir/build.make:77: CMakeFiles/depth_register_cuda.dir/src/depth_register_cuda_generated_depth_register.cu.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:164: CMakeFiles/depth_register_cuda.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
